<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:background="@drawable/gradient_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

            <EditText
                android:id="@+id/firstNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/first_name"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/lastNameInput"
                android:layout_below="@id/firstNameInput"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/last_name"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_below="@id/lastNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="30dp"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailInput"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/python" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/cancelBtn"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_white"
            android:text="@string/register"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_amber"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>